# Proiect3POO

./: CMakeLists.txt  Cell.cpp  Cell.h  CellFactory.h  ConsoleStatsObserver.h  Conwaycell.cpp  Conwaycell.h  Daynight.cpp  Daynightcell.h  Exceptions.cpp  Exceptions.h  GenerationLog.h  GoL.cbp  GoL.depend  Grid.cpp  Grid.h  Highlifecell.cpp  Highlifecell.h  ISimulationObserver.h  README.md  SimulationConfig.h  main.cpp
